--- a/template/pages/main/index.html
+++ b/template/pages/main/index.html
@@ -1,3 +1,13 @@
 		<section id="main">
-			<p>Hola mundo</p>	
+			<section>
+				
+			</section>
+			<form name="addPost" novalidate>
+				<p id="form">Create Post</p>
+				<label>Titulo</label>
+				<input type="text" placeholder="Añade un t&iacute;tulo" required>
+				<label>Contenido</label>
+				<textarea placeholder="Añade aqu&iacute; el contenido"></textarea>
+				<input type="submit" value="Submit" />
+			</form>
 		</section>
