--- a/template/pages/main/index.html
+++ b/template/pages/main/index.html
@@ -1,13 +1,14 @@
-		<section id="main">
-			<section>
-				
+		<section id="main" ng-controller="ShowController as showCtrl">
+			<section ng-repeat="post in showCtrl.post">
+				<h2>{{post.title}}</h2>	
+				<p>{{post.content}}</p>
 			</section>
-			<form name="addPost" novalidate>
+			<form name="addPost" ng-controller="CreateController as createCtrl" ng-submit="addPost.$valid && createCtrl.addPost()"novalidate>
 				<p id="form">Create Post</p>
 				<label>Titulo</label>
-				<input type="text" placeholder="Añade un t&iacute;tulo" required>
+				<input type="text" placeholder="Añade un t&iacute;tulo" ng-model="createCtrl.post.title"required>
 				<label>Contenido</label>
-				<textarea placeholder="Añade aqu&iacute; el contenido"></textarea>
+				<textarea placeholder="Añade aqu&iacute; el contenido" ng-model="createCtrl.post.content" required></textarea>
 				<input type="submit" value="Submit" />
 			</form>
 		</section>
